--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1 class="m-0 display-5 font-weight-semi-bold">
               <span class="text-primary font-weight-bold border px-3 mr-1"
                 >E</span
-              >신준돌이짱
+              >신준돌이짱zz
             </h1>
           </a>
         </div>
